welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}
var bis = 0
var co = 0
while (2*bis != co + 1){
	avance()
	if (estSurBiscuit){
		prendBiscuit()
		poseBiscuit()
		bis = bis + !
		else (estSurOrange()){
			co = co + 1
		}
	}
}
